fixed groupsNew attendees grid on iPhone 5, 6 and iPad

--- a/src/scss/_iphone5.scss
+++ b/src/scss/_iphone5.scss
@@ -107,7 +107,7 @@
   }
 
   #groupsNewBackground {
-    height: 130vh;
+    height: 100vh;
   }
 
   #groupsEditBackground {
@@ -156,6 +156,9 @@
     text-align: center;
     padding: 5px;
     .attends {
+      .row {
+        flex-wrap: nowrap;
+      }
     }
     h3 {
       font-size: 15px;
